src/test/deca/context/invalid/provided/testlValue.deca
//Resultats :
//Erreur contextuelle
//Ligne 11 : returntype of the child is not a subtype of the parent's
class A {
protected int x;
int getX(int a){
return this.x;
}
}
class B extends A {
float getX(int a){
float y = 6.2;
return y + a;
}
}
/*
class X {
void m() {
B a = new B();
int x = 5;
//B b = new B();
println(a.getX(x); // Ok du point de vue de la condition (2)
}
}
*/
